[gd_scene load_steps=3 format=3 uid="uid://c5aj8ueeghw1m"]

[ext_resource type="Script" uid="uid://brykehxncr0r4" path="res://scenes/wordsearchpuzzel.gd" id="1_pdxtt"]
[ext_resource type="Texture2D" uid="uid://vhy3rmdi8c2i" path="res://use/c785da0d610d9b860663f829a005c0f9.jpg" id="2_05imx"]

[node name="Wordsearchpuzzel" type="Node2D"]
script = ExtResource("1_pdxtt")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 40.0
offset_top = 16.0
offset_right = 1062.0
offset_bottom = 601.0
texture = ExtResource("2_05imx")
expand_mode = 3

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 165.0
offset_top = 106.0
offset_right = 519.0
offset_bottom = 536.0

[node name="Label" type="Label" parent="."]
offset_left = 762.0
offset_top = 22.0
offset_right = 1034.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "QUESTIONS"

[node name="question1" type="Label" parent="."]
offset_left = 657.0
offset_top = 50.0
offset_right = 1052.0
offset_bottom = 125.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Which keyword helps you find values within a certain range? "
autowrap_mode = 3

[node name="question2" type="Label" parent="."]
offset_left = 659.0
offset_top = 128.0
offset_right = 1055.0
offset_bottom = 202.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Which keyword allows you to match values using wildcards? "
autowrap_mode = 3

[node name="question3" type="Label" parent="."]
offset_left = 659.0
offset_top = 200.0
offset_right = 1049.0
offset_bottom = 275.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "What keyword can you use to check if a columnâ€™s value exists within a set of values? "
autowrap_mode = 3

[node name="question4" type="Label" parent="."]
offset_left = 663.0
offset_top = 276.0
offset_right = 1050.0
offset_bottom = 351.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "What keyword combines rows from two or more tables based on a related column?"
autowrap_mode = 3

[node name="question5" type="Label" parent="."]
offset_left = 663.0
offset_top = 352.0
offset_right = 1058.0
offset_bottom = 445.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "A _________ key uniquely identifies each record in a table, making it easy to retrieve, update, or delete specific data."
autowrap_mode = 3

[node name="question6" type="Label" parent="."]
offset_left = 660.0
offset_top = 436.0
offset_right = 1055.0
offset_bottom = 529.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " A ________ key connects two tables by linking a record in one table to a record in another, helping maintain data integrity and enforce relationships."
autowrap_mode = 3

[node name="answer6" type="Label" parent="."]
offset_left = 681.0
offset_top = 435.0
offset_right = 780.0
offset_bottom = 465.0
theme_override_colors/font_color = Color(0, 0.619608, 0.313726, 1)
text = "foreign"
autowrap_mode = 3

[node name="answer1" type="Label" parent="."]
offset_left = 660.0
offset_top = 101.0
offset_right = 854.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0, 0.618214, 0.314895, 1)
text = "BETWEEN"

[node name="answer2" type="Label" parent="."]
offset_left = 663.0
offset_top = 174.0
offset_right = 857.0
offset_bottom = 209.0
theme_override_colors/font_color = Color(0, 0.619608, 0.313726, 1)
text = "LIKE"

[node name="answer3" type="Label" parent="."]
offset_left = 662.0
offset_top = 249.0
offset_right = 948.0
offset_bottom = 278.0
theme_override_colors/font_color = Color(0, 0.619608, 0.313726, 1)
text = "IN"

[node name="answer4" type="Label" parent="."]
offset_left = 663.0
offset_top = 325.0
offset_right = 857.0
offset_bottom = 359.0
theme_override_colors/font_color = Color(0, 0.619608, 0.313726, 1)
text = "JOIN"

[node name="answer5" type="Label" parent="."]
offset_left = 676.0
offset_top = 352.0
offset_right = 744.0
offset_bottom = 375.0
theme_override_colors/font_color = Color(0, 0.619608, 0.313726, 1)
text = "primary"
autowrap_mode = 3

[node name="leavepuzzel" type="Button" parent="."]
offset_left = 505.0
offset_top = 535.0
offset_right = 635.0
offset_bottom = 573.0
text = "Exit"

[node name="q1" type="Button" parent="."]
offset_left = 933.0
offset_top = 77.0
offset_right = 1005.0
offset_bottom = 108.0
text = "HINT"

[node name="q2" type="Button" parent="."]
offset_left = 935.0
offset_top = 155.0
offset_right = 1007.0
offset_bottom = 186.0
text = "HINT"

[node name="q3" type="Button" parent="."]
offset_left = 938.0
offset_top = 228.0
offset_right = 1010.0
offset_bottom = 259.0
text = "HINT"

[node name="q4" type="Button" parent="."]
offset_left = 939.0
offset_top = 305.0
offset_right = 1011.0
offset_bottom = 336.0
text = "HINT"

[node name="q5" type="Button" parent="."]
offset_left = 937.0
offset_top = 404.0
offset_right = 1009.0
offset_bottom = 435.0
text = "HINT"

[node name="Button6" type="Button" parent="."]
offset_left = 942.0
offset_top = 514.0
offset_right = 1014.0
offset_bottom = 545.0
text = "HINT"

[node name="hint" type="AcceptDialog" parent="."]
title = "HINT!"
position = Vector2i(0, 36)
visible = true
